...
    LaunchedEffect(Unit) {
        courseListRef.get().addOnSuccessListener { dataSnapshot ->
            val questionPath = dataSnapshot.child(language).child(course).child(lesson).child("Listening").child("Type1").child(question)

            questionPath.children.forEach { questionSnapshot ->
...
                .padding(start = 20.dp, end = 20.dp)
                .verticalScroll(rememberScrollState())
                .testTag("Listen2Screen")
        ) {
            Spacer(modifier = Modifier.height(70.dp))
...
                                    containerColor = buttonColor01
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button01"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                                    containerColor = buttonColor11
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button11"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                                    containerColor = buttonColor02
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button02"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                                    containerColor = buttonColor12
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button12"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...

                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button03"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                                    containerColor = buttonColor13
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button13"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                                    containerColor = buttonColor04
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button04"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                                    containerColor = buttonColor14
                                ),
                                modifier = Modifier.fillMaxSize().testTag("Button14"),
                                shape = RoundedCornerShape(10.dp)
                            ) {
...
                Spacer(modifier = Modifier.height(130.dp))
                MainButton(
                    button = "CONTINUE",
                    onClick = {
                        if (buttonStatus01 && buttonStatus02 && buttonStatus03 && buttonStatus04 && buttonStatus11 && buttonStatus12 && buttonStatus13 && buttonStatus14){
...
