...
        Column(
            modifier = modifier
                .fillMaxSize()
                .background(Color(0xFF073748))
                .padding(start = 20.dp, end = 20.dp)
                .verticalScroll(rememberScrollState())
                .testTag("Listen1Screen")
        ) {
            Spacer(modifier = Modifier.height(70.dp))
            Row(verticalAlignment = Alignment.CenterVertically) {
                CloseButton(onClick = { ExitLesson() })
                Spacer(modifier = Modifier.width(10.dp))
                LinearProgress(target = progress, progressType = ProgressType.DARK)
...
                                ,
                                colors = ButtonDefaults.buttonColors(
                                    containerColor = Color(
                                        0xFF1AB8E8
                                    )
                                ),
                                modifier = Modifier.fillMaxSize().testTag("SoundButton"),
                                shape = RoundedCornerShape(15.dp)
                            ) {}
                            Column(
                                modifier = Modifier.fillMaxSize(),
                                horizontalAlignment = Alignment.CenterHorizontally,
                                verticalArrangement = Arrangement.Center
...
                    modifier = modifier.fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.Center
                ) {
                    val title1 = answerDisplay[0][0].text
                    Card(
                        modifier = Modifier.testTag("Content1"),
                        title = title1,
                        description = null,
                        cardType = cardType1,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
                        imageResId = null,
                        imageUri = null
                    )
                    Spacer(modifier = Modifier.width(20.dp))
                    val title2 = answerDisplay[1][0].text
                    Card(
                        modifier = Modifier.testTag("Content2"),
                        title = title2,
                        description = null,
                        cardType = cardType2,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
                    modifier = modifier.fillMaxWidth(),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.Center
                ) {
                    val title3 = answerDisplay[2][0].text
                    Card(
                        modifier = Modifier.testTag("Content3"),
                        title = title3,
                        description = null,
                        cardType = cardType3,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
                        imageResId = null,
                        imageUri = null
                    )
                    Spacer(modifier = Modifier.width(20.dp))
                    val title4 = answerDisplay[3][0].text
                    Card(
                        modifier = Modifier.testTag("Content4"),
                        title = title4,
                        description = null,
                        cardType = cardType4,
                        cardShape = CardShape.CHOICES_SQUARE,
                        progress = null,
                        complete = null,
...
