...
                                        onClick = { /* Go to quiz/review */ },
                                        imageResId = R.drawable.quizicon
                                    )

                                    Spacer(modifier = Modifier.height(20.dp))
                                    Card(
                                        title = "Resume",
                                        description = null,
                                        cardType = CardType.YELLOW,
                                        cardShape = CardShape.QUIZ_RESUME,
                                        progress = null,
                                        complete = null,
                                        onClick = { NavigateToLessons() },
...
